--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             }
         </style>
     </head>
+    <meta charset="utf-8">
     <body>
         <div class="topnav">
-            <a class="active" href="reader.html">Home</a>
-            <a href="about us .html">About</a>
-            <a href="">Contact</a>
+            <a class="active" href="reader.html">الصفحه الرئيسيه</a>
+            <a href="about us .html">حول</a>
+            <a href="">تواصل</a>
             <div class="topnav-right">
-              <a href="https://www.google.com/?hl=ar">Search</a>
+              <a href="https://www.google.com/?hl=ar">بحث</a>
             </div>
           </div>
     </body>
