--- a/zecola.html
+++ b/zecola.html
@@ -67,22 +67,22 @@
             }
         </style>
     </head>
+    <meta charset="utf-8">
     <div class="topnav">
-        <a class="active" href="reader.html">Home</a>
-        <a href="about us .html">About</a>
-        <a href="">Contact</a>
+        <a class="active" href="reader.html">الصفحه الرئيسيه</a>
+        <a href="about us .html">حول</a>
+        <a href="">تواصل</a>
         <div class="topnav-right">
-          <a href="https://www.google.com/?hl=ar">Search</a>
+          <a href="https://www.google.com/?hl=ar">بحث</a>
         </div>
       </div>
-    <h1>Land of Zykola</h1>
+    <h1>أرض زيكولا</h1>
     <img class="ze" src="أرض_زيكولا.jpg" alt="zecola">
-    <div class="p"><p>
-        The book is a fantasy novel by the Egyptian writer Amr Abdel Hamid. It tells the story of Khaled, a young man from a village called Al-Bahoufrik, who finds himself in a strange land called Zikula, where people trade with units of intelligence instead of money. In Zikula, the poorest (or the least intelligent) person is sacrificed every year in a ritual called the Zikula Day, where they have to play a game of shooting at a small model of themselves. Khaled tries to find a way out of Zikula and discovers that his father and brother had visited this land before him and left behind a mysterious book that contains clues about a secret passage. He also meets Asil, a doctor who helps him in his quest and falls in love with him. The book is full of adventure, suspense and mystery.</p></div>
-    <div class="down"><p>To download the book  as a pdf click</p><a href="https://www.mediafire.com/file/ur77d024uas2vo4/%25D8%25A3%25D8%25B1%25D8%25B6_%25D8%25B2%25D9%258A%25D9%2583%25D9%2588%25D9%2584%25D8%25A7_23757_Foulabook.com_.pdf/file"><p>here</p></a> </div>
-    <div class="down"><p>To listen the book click</p><a href="https://youtu.be/gtMAN_jUmdY"><p>here</p></a> </div>
+    <div class="p"><p>‏الكتاب رواية خيالية للكاتب المصري عمرو عبد الحميد. يحكي قصة خالد ، وهو شاب من قرية تدعى الباحوفريك ، يجد نفسه في أرض غريبة تسمى زيكولا ، حيث يتاجر الناس بوحدات المخابرات بدلا من المال. في زيكولا ، يتم التضحية بأفقر شخص (أو أقلهم ذكاء) كل عام في طقوس تسمى يوم زيكولا ، حيث يتعين عليهم لعب لعبة إطلاق النار على نموذج صغير لأنفسهم. يحاول خالد إيجاد طريقة للخروج من زيكولا ويكتشف أن والده وشقيقه قد زارا هذه الأرض قبله وتركا وراءهما كتابا غامضا يحتوي على أدلة حول ممر سري. يلتقي أيضا بأصيل ، الطبيب الذي يساعده في سعيه ويقع في حبه. الكتاب مليء بالمغامرة والتشويق والغموض</p></div>
+    <div class="down"><p>للتحميل اضغط</p><a href="https://www.mediafire.com/file/ur77d024uas2vo4/%25D8%25A3%25D8%25B1%25D8%25B6_%25D8%25B2%25D9%258A%25D9%2583%25D9%2588%25D9%2584%25D8%25A7_23757_Foulabook.com_.pdf/file"><p>هنا</p></a> </div>
+    <div class="down"><p>للاستماع اضغط</p><a href="https://youtu.be/gtMAN_jUmdY"><p>هنا</p></a> </div>
     <footer>
-        <p>Author: Hege Refsnes<br>
+        <p>Facebook<br>
         <a href="modynashaat39@gmail.com">modynashaat39@gmail.com</a></p>
       </footer>
       
